WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224722
LinkBuffer fails to build when MALLOC_HEAP_BREAKDOWN is enabled
https://bugs.webkit.org/show_bug.cgi?id=224722
Summary
LinkBuffer fails to build when MALLOC_HEAP_BREAKDOWN is enabled
Ben Nham
Reported
2021-04-17 14:22:26 PDT
LinkBuffer fails to build when MALLOC_HEAP_BREAKDOWN is enabled
Attachments
Patch
(1.37 KB, patch)
2021-04-17 14:23 PDT
,
Ben Nham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ben Nham
Comment 1
2021-04-17 14:23:54 PDT
Created
attachment 426349
[details]
Patch
Yusuke Suzuki
Comment 2
2021-04-17 15:20:29 PDT
Comment on
attachment 426349
[details]
Patch r=me
EWS
Comment 3
2021-04-20 01:46:59 PDT
Committed
r276292
(
236774@main
): <
https://commits.webkit.org/236774@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426349
[details]
.
Ling Ho
Comment 4
2021-04-23 02:55:26 PDT
rdar://76887633
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug