LinkBuffer fails to build when MALLOC_HEAP_BREAKDOWN is enabled https://bugs.webkit.org/show_bug.cgi?id=224722

Reviewed by Yusuke Suzuki.

When ENABLE_MALLOC_HEAP_BREAKDOWN is set, LinkBuffer causes a build failure at link time
since it never defines its debugHeap. Fix that.

* assembler/LinkBuffer.cpp:


Canonical link: https://commits.webkit.org/236774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276292 268f45cc-cd09-0410-ab3c-d52691b4dbfc